# bluebomb_micro

./: .gitmodules  README.md
.github/workflows/: esp32.yml  pico_w.yml
cmake/: bin2list.sh  l2cb.c.in  l2cb.cmake  l2cb_list.cmake
components/bluebomb_micro/: CMakeLists.txt  bluebomb_micro.c  bluebomb_micro.h  stage0_bin.h  stage1_bin.h
ports/esp32/: .gitignore  CMakeLists.txt  README.md  sdkconfig
ports/esp32/main/: CMakeLists.txt  Kconfig.projbuild  main.c
ports/pico_w/: .gitignore  CMakeLists.txt  README.md  build_all.sh  main.c
